--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "schema": "src/modules/prisma/schema.prisma"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^7.12.0",
     "@google-cloud/storage": "^5.8.0",
     "@nestjs/common": "^7.6.13",
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.13",
+    "@nestjs/elasticsearch": "^7.1.0",
     "@nestjs/platform-express": "^7.6.13",
     "@nestjs/schedule": "^0.4.3",
     "@prisma/client": "^2.18.0",
